third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_full_invalid.exp

Diagnostics:
error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_full_invalid.move:34:9
   │
32 │         let x = &mut v;
   │                 ------ mutable local borrow attempted here
33 │         let y = &v;
   │                 -- other local borrow
34 │         *x;
   │         ^^ reference used here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_full_invalid.move:14:9
   │
12 │         let x = &mut v;
   │                 ------ other mutable local borrow
13 │         let y = &mut v;
   │                 ------ mutable local borrow attempted here
14 │         *y;
   │         ^^ reference used here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_full_invalid.move:18:17
   │
17 │         let x = &mut v;
   │                 ------ other mutable local borrow
18 │         let y = id_mut(&mut v);
   │                 ^^^^^^^^^^^^^^
   │                 │      │
   │                 │      mutable local borrow attempted here
   │                 reference used here
